--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -18,6 +19,9 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-collapsible-tab-view": "^6.2.1",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-reanimated": "^3.7.1",
     "react-native-svg": "^15.0.0"
   },
   "devDependencies": {
